response error subscribe updates contrast error fix darkmode

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -326,6 +326,10 @@
     }
   }
 
+  & .cr-response.error{
+    color: var(--red-light-lighter);
+  }
+
   & .mb-disclosure {
     & > summary {
       &:hover,
